--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,26 +1,26 @@
 env:
-  browser: true
-  es6: true
-  node: true
+    browser: true
+    es6: true
+    node: true
 extends:
-  - 'eslint:recommended'
-  - 'plugin:react/recommended'
-  - 'plugin:@typescript-eslint/eslint-recommended'
-  - 'plugin:@typescript-eslint/recommended'
-  - 'plugin:prettier/recommended'
-  - 'prettier/react'
-  - 'prettier/@typescript-eslint'
+    - "eslint:recommended"
+    - "plugin:react/recommended"
+    - "plugin:@typescript-eslint/eslint-recommended"
+    - "plugin:@typescript-eslint/recommended"
+    - "plugin:prettier/recommended"
+    - "prettier/react"
+    - "prettier/@typescript-eslint"
 globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parser: '@typescript-eslint/parser'
+    Atomics: readonly
+    SharedArrayBuffer: readonly
+parser: "@typescript-eslint/parser"
 parserOptions:
-  ecmaFeatures:
-    jsx: true
-  ecmaVersion: 11
-  sourceType: module
+    ecmaFeatures:
+        jsx: true
+    ecmaVersion: 11
+    sourceType: module
 plugins:
-  - react
-  - '@typescript-eslint'
-  - 'prettier'
-rules: {}
+    - react
+    - "@typescript-eslint"
+    - "prettier"
+rules: { "react/prop-types": off }
